--- a/yt-notes/popup.html
+++ b/yt-notes/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL Printer</title>
-    <h1>YouTube Annotations v02!</h1>
+    <h1>YouTube Notes!</h1>
     <script src="popup.js"></script>
   </head>
   <body>
@@ -14,13 +14,14 @@
     <br />
     URL: <span id="ytUrl"></span>
     <br />
-    Channel: <span id="ytChannelName"></span> (@<span id="ytChannelAlias"></span>)
+    Channel: <span id="ytChannelName"></span> (@<span id="ytChannelAlias"></span
+    >)
     <br />
     Time: <span id="ytCurrentTime"></span> / <span id="ytTotalTime"></span>
     <textarea id="ytNote" rows="4" cols="50"></textarea>
 
     <button id="ytSaveButton">Save</button>
 
-    <ul id="ytAnnotations"></ul>
+    <ul id="ytNotes"></ul>
   </body>
 </html>
