--- a/yt-notes/popup.html
+++ b/yt-notes/popup.html
@@ -34,6 +34,7 @@
         </div>
       </div>
     </div>
+    <div>Note on: <span id="ytFormattedCurrentTime"></span></div>
     <textarea id="ytNote" rows="4" cols="50"></textarea>
 
     <button id="ytSaveButton">Save</button>
