Delete unnecessary HTML elements

--- a/extension/yt-notes/popup.html
+++ b/extension/yt-notes/popup.html
@@ -20,17 +20,16 @@
           <span id="ytTitle"></span>
         </h2>
         <div class="upload-info">
-          VideoId: <span id="ytVideoId"></span>
-          <br />
-          URL: <span id="ytUrl"></span>
-          <br />
+          <!-- VideoId: <span id="ytVideoId"></span> -->
+          <!-- <br /> -->
+          <!-- URL: <span id="ytUrl"></span> -->
+          <!-- <br /> -->
           Channel: <span id="ytChannelName"></span> (<span
             id="ytChannelAlias"
           ></span
           >)
           <br />
-          Time: <span id="ytCurrentTime"></span> /
-          <span id="ytTotalTime"></span>
+          <!-- Time: <span id="ytCurrentTime"></span> / <span id="ytTotalTime"></span> -->
         </div>
       </div>
     </div>
