Add message when is not a YouTube page

--- a/extension/yt-notes/popup.html
+++ b/extension/yt-notes/popup.html
@@ -68,7 +68,10 @@
             <ul id="ytNotes"></ul>
           </div>
         </div>
-        <div class="third-container"></div>
+        <div class="third-container">
+          Navigate to a YouTube video to start taking notes.
+        </div>
+        <div class="footer"></div>
       </div>
     </div>
     <script src="popup.js"></script>
